--- a/SeaBattle v1.0/SeaBattle v1.0.csproj
+++ b/SeaBattle v1.0/SeaBattle v1.0.csproj
@@ -45,6 +45,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Model\FieldModel.cs" />
+    <Compile Include="Model\SyntheticMind.cs" />
     <Compile Include="View\Form1.cs">
       <SubType>Form</SubType>
     </Compile>
